# mysql-validate-data

./: .env_example  .gitignore  Makefile  README.md  main.py  pyproject.toml
config/: env.py  exclusion.py
libs/: mysql.py
